--- a/ReservaUsuarioResponsable.html
+++ b/ReservaUsuarioResponsable.html
@@ -166,6 +166,18 @@
                 })
             },
             regresar_pantalla() {
+                this.form_reserva.nombre = ''
+                this.form_reserva.apellido = ''
+                this.form_reserva.direccion = ''
+                this.form_reserva.telefono = ''
+                this.form_reserva.email = ''
+                this.form_reserva.num_dni = ''
+                this.form_reserva.image = ''
+                this.form_reserva.alert_email = ''
+                this.form_reserva.alert_whatsapp = ''
+                this.form_reserva.tipo_doc = ''
+                this.form_reserva.tutilado = ''
+                this.form_resumen.responsable = ''
                 this.pantalla = 'ReservaUsuarioHoras'
             }
         }
